Form Spacing Fix

--- a/app/assets/stylesheets/forms.css.scss
+++ b/app/assets/stylesheets/forms.css.scss
@@ -2,7 +2,7 @@
 .formContainer{
     @include clearfix;
     width: 405px;
-    margin: 140px auto;
+    margin: 175px auto;
     text-align: center;
     background-color: #fffbf3;
     border-radius: 10px;
@@ -148,10 +148,6 @@ select {
     font-size: 13px;
     color: white;
     border-radius: 10px;
-}
-
-.formSpace {
-    height: 200px;
 }
 
 /*#flash_alert {
